--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "types": [
       "@adonisjs/core"
-    ]
+    ],
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
